[package]
name = "sentinel"
version = "0.1.0"
authors = ["caiomcg <caiomcg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tui = "0.15.0"
dns-lookup = "1.0.7"
termion = "1.5.6"

[dependencies.pnet]
version = "0.28.0"
